<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_schedule"
            android:title="@string/menu_schedule" />
        <item
            android:id="@+id/nav_lesson_week"
            android:title="@string/lesson_week" />
        <item
            android:id="@+id/nav_lesson_create"
            android:title="@string/lesson_create" />
        <item
            android:id="@+id/nav_teacher"
            android:title="@string/menu_teachers" />
        <item
            android:id="@+id/nav_discipline"
            android:title="@string/menu_disciplines" />
        <item
            android:id="@+id/nav_type"
            android:title="@string/menu_types" />
        <item
            android:id="@+id/nav_time"
            android:title="@string/menu_times" />
        <item
            android:id="@+id/nav_schedule_select"
            android:title="@string/action_select_schedule" />
    </group>

    <item android:title="@string/menu_group_communicate"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>


<!--    <item android:title="Скрыто"
        android:visible="false">
        <menu>
            <item
                android:id="@+id/nav_lesson_details"
                android:title="@string/lesson_details" />
        </menu>
    </item>-->

</menu>
