<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_schedule"
        android:name="sey.a.rasp3.ui.lesson.LessonFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_teacher"
        android:name="sey.a.rasp3.ui.teacher.TeacherFragment"
        android:label="@string/menu_teachers"
        tools:layout="@layout/fragment_teacher_list" />

    <fragment
        android:id="@+id/nav_discipline"
        android:name="sey.a.rasp3.ui.disciplines.DisciplineFragment"
        android:label="@string/menu_disciplines"
        tools:layout="@layout/fragment_discipline_list" />

    <fragment
        android:id="@+id/nav_type"
        android:name="sey.a.rasp3.ui.type.TypeFragment"
        android:label="@string/menu_types"
        tools:layout="@layout/fragment_type_list" />

    <fragment
        android:id="@+id/nav_time"
        android:name="sey.a.rasp3.ui.time.TimeFragment"
        android:label="@string/menu_times"
        tools:layout="@layout/fragment_time_list" />

    <fragment
        android:id="@+id/nav_send"
        android:name="sey.a.rasp3.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_schedule_select"
        android:name="sey.a.rasp3.ui.schedule.ScheduleFragment"
        android:label="Выбрать расписание" />
</navigation>